Fixing contrast and overall display

--- a/frontend-project/src/App.css
+++ b/frontend-project/src/App.css
@@ -25,7 +25,7 @@ h1 {
 #navbar {
   position: sticky;
   top: 0;
-  background-color: transparent;
+  background-color: rgb(0, 0, 0);
   height: 50px;
   justify-content: space-between;
   border-radius: 5px;
@@ -36,13 +36,13 @@ h1 {
 .nav-link:hover {
   text-decoration: none;
   opacity: 0.7;
-  color: white;
+  color: #ffffff;
   font-size: 18px;
 }
 .navbar-brand:hover {
   text-decoration: none;
   opacity: 0.8;
-  color: white;
+  color: rgb(255, 255, 255);
   font-size: 18px;
 }
 
@@ -61,11 +61,11 @@ h1 {
 }
 
 .current {
-  color: red;
+  color: rgb(255, 0, 0);
 }
 
 a {
-  color: white;
+  color: rgb(255, 255, 255);
   padding: 10px;
   
 }
