--- a/frontend-project/src/styles/personInfo.css
+++ b/frontend-project/src/styles/personInfo.css
@@ -1,5 +1,5 @@
 a:link {
-  color: rgb(32, 32, 245);
+  color: peru;
 }
 .Personal{
   display: flex;
